# ros2-turtlebot-sign-navigation

./: .gitignore  README.md
cv/: package.xml  setup.cfg  setup.py
cv/launch/: empty_world.launch.py  myworld.launch.py  turtlebot3_autorace_2020.launch.py
cv/models/traffic_left/: model.sdf
cv/models/turtlebot3_waffle_pi/: model.sdf
cv/src/cv/: controller_node.py
cv/worlds/: MyWorld.world
sign_detector/: package.xml  setup.py
sign_detector/sign_detector/: detector_node.py
